--- a/examples/kubernetes/pv.yaml
+++ b/examples/kubernetes/pv.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     name: data-iscsiplugin
 spec:
-  storageClassName: manual
+  storageClassName: csi-iscsi
   accessModes:
   - ReadWriteOnce
   capacity:
