--- a/examples/kubernetes/storageclass.yaml
+++ b/examples/kubernetes/storageclass.yaml
@@ -1,5 +1,6 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-   name: manual
+   name: csi-iscsi
 provisioner: manual
+volumeBindingMode: WaitForFirstConsumer
