--- a/kubernetes/csi-attacher-rbac.yaml
+++ b/kubernetes/csi-attacher-rbac.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: csi-attacher
-
+  namespace: csi-iscsi
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -30,7 +30,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: csi-attacher
-    namespace: default
+    namespace: csi-iscsi
 roleRef:
   kind: ClusterRole
   name: external-attacher-runner
