--- a/kubernetes/csi-nodeplugin-rbac.yaml
+++ b/kubernetes/csi-nodeplugin-rbac.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: csi-nodeplugin
-
+  namespace: csi-iscsi
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -27,7 +27,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: csi-nodeplugin
-    namespace: default
+    namespace: csi-iscsi
 roleRef:
   kind: ClusterRole
   name: csi-nodeplugin
